# vapoursynth

./: .gitignore  CMakeLists.txt
include/: VSHelper.h  VapourSynth.h
src/common/: p2p.h  vsutf16.h
src/core/: jitasm.h  vsapi_wine.cpp  vscore.cpp  vscore.h  vslog.cpp  vsthreadpool.cpp
src/vspipe/: vspipe.cpp
